--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   responsive_framework: ^0.1.4
   charts_flutter: ^0.11.0
-  auto_size_text: ^3.0.0-nullsafety.0
-  chart_sparkline: ^1.0.5
-  percent_indicator: ^3.4.0
-  expansion_tile_card: ^2.0.0
-  google_maps_flutter: ^2.0.11
-  get: ^4.3.8
-
+  
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +55,43 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:     
-    - assets/images/
+    - assets/images/heart.svg
+    - assets/images/Track.jpg
+    - assets/images/Reminders.png
+    - assets/images/goo.svg
+    - assets/images/regist.svg
+    - assets/images/lock.svg
+    - assets/images/code.svg
+    - assets/images/open.png
+    - assets/images/success.svg
+    - assets/images/home.png
+    - assets/images/medical.svg
+    - assets/images/high.svg
+    - assets/images/vital.svg
+    - assets/images/low.svg
+    - assets/images/health.svg
+    - assets/images/medical2.svg
+    - assets/images/mental.svg
+    - assets/images/avatar.png
+    - assets/images/changeProfilePicture.jpg
+    - assets/images/Report.jpg
+    - assets/images/data.png
+    - assets/images/calc1.svg
+    - assets/images/calc2.svg
+    - assets/images/calc3.svg
+    - assets/images/Female.png
+    - assets/images/Male.png
+    - assets/images/med4.svg
+    - assets/images/med3.svg
+    - assets/images/med2.svg
+    - assets/images/med1.svg
+    - assets/images/docum.svg
+    - assets/images/medical.png
+    - assets/images/nabbda.svg
+    - assets/images/Group.svg
+    - assets/images/Error.svg
+
+
     
 
 
@@ -136,6 +166,14 @@ flutter:
     - family: Correct
       fonts:
         - asset: assets/fonts/Correct.ttf
+
+        
+        
+        
+    - family: Hide
+      fonts:
+        - asset: assets/fonts/Hide.ttf
+
 
         
   
