--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,16 @@ flutter:
     - assets/images/nabbda.svg
     - assets/images/Group.svg
     - assets/images/Error.svg
+    - assets/images/qxmd.svg
+    - assets/images/ASCVD.svg
+    - assets/images/Stroke.svg
+    - assets/images/arteries.svg
+    - assets/images/heart1.svg
+    - assets/images/Female.svg
+    - assets/images/Male.svg
+    - assets/images/Female.svg
+    - assets/images/Data.svg
+    
 
 
     
