--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   chart_sparkline: ^1.0.5
   percent_indicator: ^3.4.0
+  expansion_tile_card: ^2.0.0
 
 
 dev_dependencies:
