--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   chart_sparkline: ^1.0.5
   percent_indicator: ^3.4.0
   expansion_tile_card: ^2.0.0
+  google_maps_flutter: ^2.0.11
 
 
 dev_dependencies:
