--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   percent_indicator: ^3.4.0
   expansion_tile_card: ^2.0.0
   google_maps_flutter: ^2.0.11
+  get: ^4.3.8
 
 
 dev_dependencies:
