--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,10 @@ dependencies:
   charts_flutter: ^0.11.0
   auto_size_text: ^3.0.0-nullsafety.0
   chart_sparkline: ^1.0.5
-<<<<<<< HEAD
-
-  
-=======
   percent_indicator: ^3.4.0
   expansion_tile_card: ^2.0.0
   google_maps_flutter: ^2.0.11
 
->>>>>>> hesham
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +60,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:     
-<<<<<<< HEAD
+
     - assets/images/heart.svg
     - assets/images/Track.jpg
     - assets/images/Reminders.png
@@ -111,12 +106,16 @@ flutter:
     - assets/images/Female.svg
     - assets/images/Data.svg
     - assets/images/DrMohamed.svg
+    - assets/images/Bank1.png
+    - assets/images/Bank2.png
+    - assets/images/Bank3.png
+    - assets/images/Sent.png
     
 
 
-=======
+
     - assets/images/
->>>>>>> hesham
+
     
 
 
