--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   charts_flutter: ^0.11.0
   auto_size_text: ^3.0.0-nullsafety.0
   chart_sparkline: ^1.0.5
+  get: ^4.3.8
+  expansion_tile_card: ^2.0.0
+  google_maps_flutter: ^2.1.0
+  percent_indicator: ^3.4.0
+  smooth_page_indicator: ^1.0.0+2
+  fl_chart: ^0.40.2
 
   
 
@@ -58,52 +64,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:     
-    - assets/images/heart.svg
-    - assets/images/Track.jpg
-    - assets/images/Reminders.png
-    - assets/images/goo.svg
-    - assets/images/regist.svg
-    - assets/images/lock.svg
-    - assets/images/code.svg
-    - assets/images/open.png
-    - assets/images/success.svg
-    - assets/images/home.png
-    - assets/images/medical.svg
-    - assets/images/high.svg
-    - assets/images/vital.svg
-    - assets/images/low.svg
-    - assets/images/health.svg
-    - assets/images/medical2.svg
-    - assets/images/mental.svg
-    - assets/images/avatar.png
-    - assets/images/changeProfilePicture.jpg
-    - assets/images/Report.jpg
-    - assets/images/data.png
-    - assets/images/calc1.svg
-    - assets/images/calc2.svg
-    - assets/images/calc3.svg
-    - assets/images/Female.png
-    - assets/images/Male.png
-    - assets/images/med4.svg
-    - assets/images/med3.svg
-    - assets/images/med2.svg
-    - assets/images/med1.svg
-    - assets/images/docum.svg
-    - assets/images/medical.png
-    - assets/images/nabbda.svg
-    - assets/images/Group.svg
-    - assets/images/Error.svg
-    - assets/images/qxmd.svg
-    - assets/images/ASCVD.svg
-    - assets/images/Stroke.svg
-    - assets/images/arteries.svg
-    - assets/images/heart1.svg
-    - assets/images/Female.svg
-    - assets/images/Male.svg
-    - assets/images/Female.svg
-    - assets/images/Data.svg
-    - assets/images/DrMohamed.svg
-    
+    - assets/images/
 
 
     
