--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   percent_indicator: ^3.4.0
   smooth_page_indicator: ^1.0.0+2
   fl_chart: ^0.40.2
+  flutter_balloon_slider: ^0.1.1
 
   
 
