--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   fl_chart: ^0.40.2
   flutter_balloon_slider: ^0.1.1
+  carousel_slider: ^4.0.0
 
-  
+
+
 
 dev_dependencies:
   flutter_test:
