--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,9 +85,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: nabbdaIcons
+    - family: navigationIcons
       fonts:
-        - asset: assets/fonts/nabbdaIcons.ttf
+        - asset: assets/fonts/navigationIcons.ttf
 
 
   
