--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   fl_chart: ^0.40.2
   carousel_slider: ^4.0.0
-
-
-
+  intl: ^0.17.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
